arrow in collapse fix

--- a/src/css/ui-kit/_buttons.scss
+++ b/src/css/ui-kit/_buttons.scss
@@ -586,7 +586,7 @@ button {
       background-image: url("../../img/arrow-down.svg");
       background-repeat: no-repeat;
       background-size: 1rem 1.6rem;
-      width: 2rem;
+      width: 1rem;
       height: 1.6rem;
       margin-left: 1rem;
     }
@@ -598,7 +598,7 @@ button {
         background-image: url("../../img/arrow-down.svg");
         background-repeat: no-repeat;
         background-size: 1rem 1.6rem;
-        width: 2rem;
+        width: 1rem;
         height: 1.6rem;
         margin-left: 1rem;
         transform: rotate(180deg);
